# wiki_path_finder

./: .dockerignore  .env.example  .gitignore  Dockerfile.python  README.md  docker-compose.yml  requirements  requirements.txt
api/: main.py
benchmarking/: __init__.py  __main__.py  case_generator.py  dashboard.py  metrics.py  models.py  runner.py  service.py  version.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx  PathTimeline.tsx  SearchLoader.tsx
frontend/src/hooks/: use-theme.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx
reports/: metrics.json
rust_search_service/: Cargo.toml  Dockerfile
rust_search_service/src/: handlers.rs  main.rs  metrics.rs  models.rs  search.rs  text.rs  wiki.rs  wikipedia_api.rs
search/: api_client.py  path_finder.py  result.py  rust_client.py  step_words.py  test.py
telegram_bot/: handlers.py  main.py  title_validator.py
